--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "http-status-codes": "^2.3.0",
     "mongoose": "^8.5.1",
     "nodemon": "^3.1.4",
+    "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.10",
+    "@types/validator": "^13.12.0",
     "typescript": "^5.5.3"
   }
 }
